welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:9: error: type mismatch;
 found   : Unit
 required: Boolean
}} 
 ^